[gd_scene load_steps=3 format=3 uid="uid://cp0xjj87pls2c"]

[ext_resource type="Script" uid="uid://defmflmoq138b" path="res://scripts/dialogue_box.gd" id="1_n23yb"]
[ext_resource type="FontFile" uid="uid://dwss16o2excw6" path="res://assets/fonts/pixelFont-7-8x14-sproutLands.ttf" id="2_0nste"]

[node name="DialogueBox" type="PanelContainer"]
custom_minimum_size = Vector2(600, 150)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -31.0
offset_right = 20.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n23yb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="SpeakerLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0nste")
theme_override_font_sizes/font_size = 16
text = "Speaker Name"

[node name="DialogueLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_0nste")
text = "Dialogue Text goes here..."
autowrap_mode = 3

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_0nste")
text = "Continue (E)"
